--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,12 @@
+Body{
+  display:flex;
+  flex-direction:column;
+}
+
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin:0;
+  padding:0;
   text-align: center;
 }
 
@@ -112,13 +117,6 @@ span{
   font-weight:700;
 }
 
-.Languages{
-  display:flex;
-  flex-direction:row;
-  gap:10px;
-  align-items:center;
-}
-
 .Close{
   width:50px;
   height:50px;
@@ -127,4 +125,9 @@ span{
   top:50px;
   background:none;
   font-weight:900;
+}
+
+.BlogPost{
+  height:auto;
+  width:300px;
 }
